Collapse action interfaces