@@ -19,17 +19,17 @@
 package org.deltafi.core.action;
 import lombok.SneakyThrows;
 import org.deltafi.actionkit.action.error.ErrorResult;
+import org.deltafi.actionkit.action.parameters.ActionParameters;
+import org.deltafi.actionkit.action.transform.TransformInput;
 import org.deltafi.actionkit.action.transform.TransformResultType;
 import org.deltafi.common.types.ActionContext;
-import org.deltafi.common.types.Content;
-import org.deltafi.common.types.SourceInfo;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collections;
-import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 import static org.hamcrest.CoreMatchers.instanceOf;
@@ -56,14 +56,8 @@ class ErrorByFiatTransformActionTest {
     @Test
     @SneakyThrows
     void transformTest() {
-        TransformResultType result = action.transform(ACTION_CONTEXT, sourceInfo(), new Content(), Collections.emptyMap());
+        TransformResultType result = action.transform(ACTION_CONTEXT, new ActionParameters(), new TransformInput(FILE_NAME, FLOW, Map.of(), Collections.emptyList(), Collections.emptyMap()));
         assertThat(result, instanceOf(ErrorResult.class));
 
     }
-
-    SourceInfo sourceInfo() {
-        return new SourceInfo(FILE_NAME, FLOW, List.of());
-    }
-
-
 }
